update guidline for add component to ClearNLP